fix: allow line break in things to do special word

--- a/src/components/sectionBlocks/boat/thingsToDo/ThingsToDo.module.css
+++ b/src/components/sectionBlocks/boat/thingsToDo/ThingsToDo.module.css
@@ -60,6 +60,7 @@
 
 .specialWordBlock {
     display: block;
+    white-space: pre-line;
 }
 
 /* Center image - landscape, opposite corner pattern */
